# nature_playground_grpc

./: .dockerignore  Cargo.toml  Makefile  README.md  build.rs
.docker/: Dockerfile  docker-compose.yml
data/: plants.json
proto/: criteria.proto  forest.proto  global.proto  main.proto  plant.proto
src/: client.rs  nature_playground.rs  server.rs  storage.rs  utils.rs
src/services/: mod.rs  plant.rs
