[package]
edition = "2021"
name = "grpc_rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3"
futures-core = "0.3"
futures-util = "0.3"
hyper = "0.14"
prost = "0.9"
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"]}
tokio-stream = "0.1"
tonic = "0.6"

[build-dependencies]
tonic-build = "0.6"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"
